HTML for Hero section

--- a/index.html
+++ b/index.html
@@ -106,6 +106,26 @@
           </svg>
         </div>
       </header>
+
+      <section class="hero">
+        <img
+          class="hero__img"
+          src="/assets/images/homepage/homepage-bg.png"
+          alt="Beary Beach CBD Gummies"
+        />
+
+        <div class="hero__content">
+          <h1 class="hero__content--title">
+            Pure All Natural CBD Inspired by the Islands of Hawaii
+          </h1>
+
+          <p class="hero__content--subtitle">
+            ZERO THC - all natural cannabidoil
+          </p>
+
+          <a class="button button--hero" href="#">Shop Now</a>
+        </div>
+      </section>
     </div>
   </body>
 </html>
