HTML for Benefits section

--- a/index.html
+++ b/index.html
@@ -126,6 +126,54 @@
           <a class="button button--hero" href="#">Shop Now</a>
         </div>
       </section>
+
+      <section class="benefits">
+        <div class="benefits__top">
+          <h2 class="benefits__top--title">Verma's Benefits</h2>
+
+          <p class="benefits__top--subtitle">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Dignissimos perferendis ipsam modi placeat vel soluta.
+          </p>
+        </div>
+
+        <div class="benefits__bottom">
+          <div class="card">
+            <img
+              class="card__img"
+              src="/assets/images/homepage/image1.png"
+              alt="Lady relaxing in bed"
+            />
+
+            <div class="card__description">
+              <p>Quiet your mind and calm the storm.</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img
+              class="card__img"
+              src="/assets/images/homepage/image2.png"
+              alt="Man surfing the waves"
+            />
+
+            <div class="card__description">
+              <p>Ease your pain and soothe your joints.</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img
+              class="card__img"
+              src="/assets/images/homepage/image3.png"
+              alt="Couple cuddling in bed"
+            />
+            <div class="card__description">
+              <p>Sleep tight and wake up refreshed.</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
