CSS for Hero Mobile

--- a/index.html
+++ b/index.html
@@ -129,6 +129,12 @@
 
       <section class="hero">
         <img
+          class="hero__img--mobile"
+          src="/assets/images/product page/product-image.png"
+          alt="Berry Beach CBD Gummies"
+        />
+
+        <img
           class="hero__img"
           src="/assets/images/homepage/homepage-bg.png"
           alt="Beary Beach CBD Gummies"
