CSS for Footer Mobile

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <div class="footer__top">
           <a class="button button--btp" href="#">Back to Top</a>
           <img
-            class="footer_top--logo"
+            class="footer__top--logo"
             src="/assets/images/homepage/round-footer-logo.png"
             alt="Logo round"
           />
