CSS Satisfaction for Mobile

--- a/index.html
+++ b/index.html
@@ -207,6 +207,87 @@
         </div>
       </section>
 
+      <section class="satisfaction">
+        <img
+          class="satisfaction__img"
+          src="/assets/images/homepage/hand-oil-image.png"
+          alt="hand oil image"
+        />
+        <div class="satisfaction__container">
+          <div class="satisfaction__content">
+            <h2 class="satisfaction__subtitle">Satisfaction Guaranteed</h2>
+            <h1 class="satisfaction__title">Love it, Or It's On Us</h1>
+            <div class="satisfaction__list">
+              <div class="satisfaction__list-item">
+                <div class="list-item_icon-container">
+                  <img
+                    class="list-item__icon list-item__icon--hands"
+                    src="/assets/images/homepage/hands-icon.png"
+                    alt="Hands Icon"
+                  />
+                </div>
+                <div class="list-item__content">
+                  <p class="list-item__name">Try Verma Farms Risk Free</p>
+                  <p class="list-item__desc">
+                    Lorem ipsum dolor sit amet, consectetur.
+                  </p>
+                </div>
+              </div>
+
+              <div class="satisfaction__list-item">
+                <div class="list-item_icon-container">
+                  <img
+                    class="list-item__icon list-item__icon--squiggles"
+                    src="/assets/images/homepage/squiggles-icon.png"
+                    alt="Squiggles icon"
+                  />
+                </div>
+                <div class="list-item__content">
+                  <p class="list-item__name">No High Whatsoever</p>
+                  <p class="list-item__desc">
+                    Lorem ipsum dolor sit amet, consectetur.
+                  </p>
+                </div>
+              </div>
+
+              <div class="satisfaction__list-item">
+                <div class="list-item_icon-container">
+                  <div class="list-item_icon-container">
+                    <img
+                      class="list-item__icon list-item__icon--lemon"
+                      src="/assets/images/homepage/lemon-icon.png"
+                      alt="Lemon icon"
+                    />
+                  </div>
+                </div>
+                <div class="list-item__content">
+                  <p class="list-item__name">All Natural Ingredients</p>
+                  <p class="list-item__desc">
+                    Lorem ipsum dolor sit amet, consectetur.
+                  </p>
+                </div>
+              </div>
+
+              <div class="satisfaction__list-item">
+                <div class="list-item_icon-container">
+                  <img
+                    class="list-item__icon list-item__icon--legal"
+                    src="/assets/images/homepage/legal-icon.png"
+                    alt="Legal icon"
+                  />
+                </div>
+                <div class="list-item__content">
+                  <p class="list-item__name">Now Legal In All 50 States</p>
+                  <p class="list-item__desc">
+                    Lorem ipsum dolor sit amet, consectetur.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <footer>
         <div class="footer__top">
           <a class="button button--btp" href="#">Back to Top</a>
