CSS Learn for Mobile

--- a/index.html
+++ b/index.html
@@ -285,6 +285,26 @@
         </div>
       </section>
 
+      <section class="learn">
+        <div class="learn__container">
+          <img
+            class="learn__img"
+            src="/assets/images/homepage/gummies-stacked.png"
+            alt="Gummies stacked"
+          />
+
+          <div class="learn__content">
+            <h2 class="learn__subtitle">How Does It Work?</h2>
+            <h1 class="learn__title">It's Simple, Really</h1>
+            <p class="learn__desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+              culpa ipsa magni esse quam autem unde repudiandae placeat sunt?
+            </p>
+            <a class="button button--learn" href="#">Learn More</a>
+          </div>
+        </div>
+      </section>
+
       <footer>
         <div class="footer__top">
           <a class="button button--btp" href="#">Back to Top</a>
