Making Learn section responsive - md lg media

--- a/index.html
+++ b/index.html
@@ -287,11 +287,13 @@
 
       <section class="learn">
         <div class="learn__container">
-          <img
-            class="learn__img"
-            src="/assets/images/homepage/gummies-stacked.png"
-            alt="Gummies stacked"
-          />
+          <div class="learn__img--container">
+            <img
+              class="learn__img"
+              src="/assets/images/homepage/gummies-stacked.png"
+              alt="Gummies stacked"
+            />
+          </div>
 
           <div class="learn__content">
             <h2 class="learn__subtitle">How Does It Work?</h2>
