HTML for About CBD

--- a/index.html
+++ b/index.html
@@ -205,6 +205,103 @@
         </div>
       </section>
 
+      <section class="about">
+        <div class="about__container">
+          <div class="about__block about__block--1">
+            <div class="block-1__img--container">
+              <img
+                class="block-1__img"
+                src="/assets/images/homepage/round-logo-orange.png"
+                alt="Logo"
+              />
+            </div>
+            <h1 class="about__title">About Our CBD</h1>
+            <p class="about__desc about__desc--block1">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Reiciendis voluptas facere expedita vero aspernatur cupiditate.
+            </p>
+          </div>
+
+          <div class="about__block about__block--2">
+            <div class="block-2__img--container">
+              <img
+                class="block-2__img"
+                src="/assets/images/homepage/white-bowl.png"
+                alt="Logo"
+              />
+            </div>
+          </div>
+
+          <div class="about__block about__block--3">
+            <div class="block-3__img--container">
+              <img
+                class="block-3__img"
+                src="/assets/images/homepage/ingredients-icon.png"
+                alt="Icon"
+              />
+            </div>
+            <h2 class="about__subtitle about__subtitle--block3">
+              High Quality Ingredients
+            </h2>
+            <p class="about__desc about__desc--block3">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Reiciendis voluptas facere expedita vero aspernatur cupiditate.
+            </p>
+          </div>
+
+          <div class="about__block about__block--4">
+            <div class="block-4__img--container">
+              <img
+                class="block-4__img"
+                src="/assets/images/homepage/benefit-icon.png"
+                alt="Icon"
+              />
+            </div>
+            <h2 class="about__subtitle about__subtitle--block4">xyz Benefit</h2>
+            <p class="about__desc about__desc--block4">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Reiciendis voluptas facere expedita vero aspernatur cupiditate.
+            </p>
+          </div>
+
+          <div class="about__block about__block--5">
+            <div class="block-5__img--container">
+              <img
+                class="block-5__img"
+                src="/assets/images/homepage/thc-icon.png"
+                alt="Icon"
+              />
+            </div>
+            <h2 class="about__subtitle about__subtitle--block5">THC</h2>
+            <p class="about__desc about__desc--block5">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Reiciendis voluptas facere expedita vero aspernatur cupiditate.
+            </p>
+          </div>
+
+          <div class="about__block about__block--6">
+            <div class="block-6__img--container">
+              <img
+                class="block-6__img"
+                src="/assets/images/homepage/plants-icon.png"
+                alt="Icon"
+              />
+            </div>
+            <h2 class="about__subtitle about__subtitle--block6">
+              From Plants... to Gummies
+            </h2>
+            <p class="about__desc about__desc--block6">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Reiciendis voluptas facere expedita vero aspernatur cupiditate.
+            </p>
+          </div>
+
+          <div class="about__block about__block--7">
+            <a class="button button--about" href="#">More About CBD</a>
+          </div>
+        </div>
+      </section>
+
       <section class="satisfaction">
         <div class="satisfaction__wrapper">
           <img
