--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Verma Farms</title>
-    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -130,13 +130,13 @@
       <section class="hero">
         <img
           class="hero__img--mobile"
-          src="/assets/images/product page/product-image.png"
+          src="./assets/images/product page/product-image.png"
           alt="Berry Beach CBD Gummies"
         />
 
         <img
           class="hero__img"
-          src="/assets/images/homepage/homepage-bg.png"
+          src="./assets/images/homepage/homepage-bg.png"
           alt="Beary Beach CBD Gummies"
         />
 
@@ -171,7 +171,7 @@
           <div class="card">
             <img
               class="card__img"
-              src="/assets/images/homepage/image1.png"
+              src="./assets/images/homepage/image1.png"
               alt="Lady relaxing in bed"
             />
 
@@ -183,7 +183,7 @@
           <div class="card">
             <img
               class="card__img"
-              src="/assets/images/homepage/image2.png"
+              src="./assets/images/homepage/image2.png"
               alt="Man surfing the waves"
             />
 
@@ -195,7 +195,7 @@
           <div class="card">
             <img
               class="card__img"
-              src="/assets/images/homepage/image3.png"
+              src="./assets/images/homepage/image3.png"
               alt="Couple cuddling in bed"
             />
             <div class="card__description">
@@ -211,7 +211,7 @@
             <div class="block-1__img--container">
               <img
                 class="block-1__img"
-                src="/assets/images/homepage/round-logo-orange.png"
+                src="./assets/images/homepage/round-logo-orange.png"
                 alt="Logo"
               />
             </div>
@@ -226,7 +226,7 @@
             <div class="block-2__img--container">
               <img
                 class="block-2__img"
-                src="/assets/images/homepage/white-bowl.png"
+                src="./assets/images/homepage/white-bowl.png"
                 alt="Logo"
               />
             </div>
@@ -236,7 +236,7 @@
             <div class="block-3__img--container">
               <img
                 class="block-3__img"
-                src="/assets/images/homepage/ingredients-icon.png"
+                src="./assets/images/homepage/ingredients-icon.png"
                 alt="Icon"
               />
             </div>
@@ -252,7 +252,7 @@
             <div class="block-4__img--container">
               <img
                 class="block-4__img"
-                src="/assets/images/homepage/benefit-icon.png"
+                src="./assets/images/homepage/benefit-icon.png"
                 alt="Icon"
               />
             </div>
@@ -266,7 +266,7 @@
             <div class="block-5__img--container">
               <img
                 class="block-5__img"
-                src="/assets/images/homepage/thc-icon.png"
+                src="./assets/images/homepage/thc-icon.png"
                 alt="Icon"
               />
             </div>
@@ -280,7 +280,7 @@
             <div class="block-6__img--container">
               <img
                 class="block-6__img"
-                src="/assets/images/homepage/plants-icon.png"
+                src="./assets/images/homepage/plants-icon.png"
                 alt="Icon"
               />
             </div>
@@ -303,7 +303,7 @@
         <div class="satisfaction__wrapper">
           <img
             class="satisfaction__img"
-            src="/assets/images/homepage/hand-oil-image.png"
+            src="./assets/images/homepage/hand-oil-image.png"
             alt="hand oil image"
           />
           <div class="satisfaction__container">
@@ -315,7 +315,7 @@
                   <div class="list-item_icon-container">
                     <img
                       class="list-item__icon list-item__icon--hands"
-                      src="/assets/images/homepage/hands-icon.png"
+                      src="./assets/images/homepage/hands-icon.png"
                       alt="Hands Icon"
                     />
                   </div>
@@ -330,7 +330,7 @@
                   <div class="list-item_icon-container">
                     <img
                       class="list-item__icon list-item__icon--squiggles"
-                      src="/assets/images/homepage/squiggles-icon.png"
+                      src="./assets/images/homepage/squiggles-icon.png"
                       alt="Squiggles icon"
                     />
                   </div>
@@ -346,7 +346,7 @@
                     <div class="list-item_icon-container">
                       <img
                         class="list-item__icon list-item__icon--lemon"
-                        src="/assets/images/homepage/lemon-icon.png"
+                        src="./assets/images/homepage/lemon-icon.png"
                         alt="Lemon icon"
                       />
                     </div>
@@ -362,7 +362,7 @@
                   <div class="list-item_icon-container">
                     <img
                       class="list-item__icon list-item__icon--legal"
-                      src="/assets/images/homepage/legal-icon.png"
+                      src="./assets/images/homepage/legal-icon.png"
                       alt="Legal icon"
                     />
                   </div>
@@ -384,7 +384,7 @@
           <div class="learn__img--container">
             <img
               class="learn__img"
-              src="/assets/images/homepage/gummies-stacked.png"
+              src="./assets/images/homepage/gummies-stacked.png"
               alt="Gummies stacked"
             />
           </div>
@@ -406,14 +406,14 @@
           <a class="button button--btp" href="#">Back to Top</a>
           <img
             class="footer__top--logo"
-            src="/assets/images/homepage/round-footer-logo.png"
+            src="./assets/images/homepage/round-footer-logo.png"
             alt="Logo round"
           />
           <div class="footer__top--shop">
             <p class="footer__top--shop-text">Our Shop</p>
             <img
               class="footer__top--shop-arrow"
-              src="/assets/images/homepage/arrow.png"
+              src="./assets/images/homepage/arrow.png"
               alt="Right arrow"
             />
           </div>
@@ -434,7 +434,7 @@
           <div class="footer__logo">
             <img
               class="footer__logo--img"
-              src="/assets/images/homepage/logo-white-footer.png"
+              src="./assets/images/homepage/logo-white-footer.png"
               alt="Verma Farms Logo"
             />
           </div>
